Inclusão das bandeiras da área de contato

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -29,7 +29,7 @@
                                         <div class="col-sm-12">
                                             <div class="single_contact_info">
                                                 <div class="single_info_icon">
-                                                    <i class="fa fa-home" style="color: #0093e4;"></i>
+                                                    <img src="assets/images/contact/home.png" alt="">
                                                 </div>
                                                 <div class="single_info_text">
                                                     <h3>Venha nos visitar</h3>
@@ -40,7 +40,7 @@
                                         <div class="col-sm-12">
                                             <div class="single_contact_info">
                                                 <div class="single_info_icon">
-                                                    <i class="fa fa-envelope-o" style="color:#ff662a;"></i>
+                                                    <img src="assets/images/contact/email.png" alt="">
                                                 </div>
                                                 <div class="single_info_text">
                                                     <h3>Nosso email</h3>
@@ -51,7 +51,7 @@
                                         <div class="col-sm-12">
                                             <div class="single_contact_info">
                                                 <div class="single_info_icon">
-                                                    <i class="fa fa-mobile" style="color: #008e48;"></i>
+                                                    <img src="assets/images/contact/telefone.png" alt="">
                                                 </div>
                                                 <div class="single_info_text">
                                                     <h3>Ligue para nós</h3>
@@ -62,7 +62,7 @@
                                         <div class="col-sm-12">
                                             <div class="single_contact_info">
                                                 <div class="single_info_icon">
-                                                    <i class="fa fa-clock-o" style="color: #fe3378;"></i>
+                                                    <img src="assets/images/contact/horario.png" alt="">
                                                 </div>
                                                 <div class="single_info_text">
                                                     <h3>Horário de trabalho</h3>
@@ -151,9 +151,9 @@
 			<div class="contact_info_content">
 				<div class="col-sm-6">
 					<div class="single_contact_info">
-						<div class="single_info_icon">
-							<i class="fa fa-subway" style="color: #0093e4;"></i>
-						</div>
+                        <div class="single_info_icon">
+                            <img src="assets/images/contact/metro.png" alt="">
+                        </div>
 						<div class="single_info_text">
 							<h3>Metrô</h3>
 							<p class="font-124">Descer na Estação Central e sair pela Rua Sapucaí </p>
@@ -162,9 +162,9 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="single_contact_info">
-						<div class="single_info_icon">
-							<i class="fa fa-bus" style="color:#ff662a;"></i>
-						</div>
+                        <div class="single_info_icon">
+                            <img src="assets/images/contact/onibus.png" alt="">
+                        </div>
 						<div class="single_info_text">
 							<h3>Ônibus</h3>
 							<p class="font-124">Linhas que atendem a região: 8205 / 8106 / 9104 / 8103 / 8405 / 9210 / SC03A </p>
@@ -173,9 +173,9 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="single_contact_info">
-						<div class="single_info_icon">
-							<i class="fa fa-male" style="color: #008e48;"></i>
-						</div>
+                        <div class="single_info_icon">
+                            <img src="assets/images/contact/andar.png" alt="">
+                        </div>
 						<div class="single_info_text">
 							<h3>Caminhada</h3>
 							<p class="font-124">À 800 m da Praça Sete de Setembro, na Região Central de BH</p>
@@ -184,9 +184,9 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="single_contact_info">
-						<div class="single_info_icon">
-							<i class="fa fa-map-marker" style="color: #fe3378;"></i>
-						</div>
+                        <div class="single_info_icon">
+                            <img src="assets/images/contact/referencia.png" alt="">
+                        </div>
 						<div class="single_info_text">
 							<h3>Pontos de referências</h3>
 							<p class="font-124">Viaduto Santa Tereza, TV Alterosa, Salumeria Centrale</p>
