Depoimentos na home

--- a/src/app/pages/home/button-block/button-block.component.html
+++ b/src/app/pages/home/button-block/button-block.component.html
@@ -14,3 +14,11 @@
 		</div>
 	</div>
 </button>
+<button (click)="goToTestimony()" *ngIf="btnIcon == 'testimony'"class="btn-block-salmon btn-block-salmon-2 btn-block-salmon-2b">
+	<div>
+		<div class="visit-testimony-icon">
+			<i class="fa fa-comments fa-4x" aria-hidden="true"></i>
+			<h2>TODOS DEPOIMENTOS</h2>
+		</div>
+	</div>
+</button>
