--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,7 @@
 <!-- <cba-slide></cba-slide> -->
 <cba-banner-home></cba-banner-home>
 <cba-about></cba-about>
+<cba-testimony></cba-testimony>
 <cba-counter-up></cba-counter-up>
 <cba-highlights-news></cba-highlights-news>
 <cba-timeline></cba-timeline>
