--- a/src/app/pages/home/testimony/testimony.component.css
+++ b/src/app/pages/home/testimony/testimony.component.css
@@ -118,3 +118,228 @@
     position: relative;
 }
 .lead-tstmnl-slider .slick-dots li.slick-active {background-color: #e73022;}
+
+.w100 {
+	width: 100%;
+}
+.item {
+	text-align: left;
+}
+.carousel-inner>.item>img, .carousel-inner>.item>a>img{
+	position: relative;
+}
+.carousel-control.left {
+	background: transparent;
+}
+.carousel-control.right {
+	background: transparent;
+}
+
+
+
+.title { font-size:45px; font-weight:bolder; padding-bottom:25px;
+border-bottom:5px solid #ccc; margin-bottom:5px;}
+.title-info { padding-bottom:25px; font-variant:small-caps;
+}
+.client {
+    margin-bottom: 1.71875em;
+    padding: 40px;
+}
+.client {
+    color: #fff;
+    margin-bottom: 1.375em;
+    padding: 25px 80px;
+	position: relative;
+	margin: 50px;
+}
+/* color list */
+.dark {  background-color: #333333;}
+.ice {  background-color: #fff;}
+.salmon { background-color:#FA8072;}
+.purple { background-color:#800080;}
+.darkcyan { background-color:#008B8B;}
+.crimson { background-color:#DC143C;}
+.ice .image-container img {border: 5px solid #fff;}
+.dark .image-container img {border: 5px solid #333333;}
+.salmon .image-container img {border: 5px solid #FA8072;}
+.purple .image-container img {border: 5px solid #800080;}
+.darkcyan .image-container img {border: 5px solid #008B8B;}
+.crimson .image-container img {border: 5px solid #DC143C;}
+/* color list */
+.image-container {
+    display: block;
+    height: 100%;
+    left: 0;
+	box-shadow: 0 5px 15px #cccccc;
+    margin: 0;
+    position: absolute;
+    top: 0;
+	width: 100%;
+	padding: 20px;
+}
+.image-container img {
+    left: -15px;
+    position: absolute;
+    top: -40px;
+}
+.image-container img {
+    border-radius: 50%;
+	height: 120px;
+    margin-bottom: 1.375em;
+    vertical-align: middle;
+    width: 120px;
+}
+.heading {
+    display: inline-block;
+    font-size: 1.75em;
+    font-weight: bolder;
+    color: #fff;
+    margin-bottom: 10px;
+    text-transform: none;
+    padding-left: 35px;
+	position: relative;
+	line-height: 1.3rem;
+    top: -20px;
+}
+.sub-heading {
+    color: #fff;
+    font-weight: bolder;
+    text-transform: none;
+    position: relative;
+    top: -25px;
+	padding-left: 35px;
+	margin-bottom: 5px;
+	line-height: 1rem;
+	text-align: left;
+}
+.info {
+	line-height: 1.54688em;
+	font-size: larger;
+    position: relative;
+	z-index: 1;
+	top: -30px;
+}
+
+
+
+/*figure.snip1197 {
+  font-family: 'Raleway', Arial, sans-serif;
+  position: relative;
+  float: left;
+  margin: 10px 1% 40px;
+  min-width: 400px;
+  max-width: 480px;
+  width: 100%;
+  color: #333;
+  text-align: left;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}*/
+
+figure.snip1197 {
+    font-family: 'Raleway', Arial, sans-serif;
+    position: relative;
+    /* float: right; */
+    /* margin-left: 15%; */
+    min-width: 400px;
+    max-width: 80%;
+    margin: 0 auto;
+    width: 100%;
+    max-height: 350px;
+    color: #333;
+    text-align: left;
+    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);*/
+}
+figure.snip1197 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+figure.snip1197 img {
+  float: left;
+  max-width: 40%;
+  max-height: 350px;
+  vertical-align: middle;
+  border-radius: 0 8px 8px 0;
+}
+figure.snip1197 figcaption {
+  top: 0;
+  display: inline-block;
+  bottom: 0;
+  left: 0;
+  width: 60%;
+  position: relative;
+  background-color: #ffffff;
+  border-radius: 8px 0 0 8px;
+}
+figure.snip1197 blockquote {
+  position: relative;
+  padding: 25px 50px 25px 50px;
+  font-size: large;
+  font-weight: 500;
+  text-align: left;
+  margin: 0;
+  line-height: 1.6em;
+  font-style: italic;
+}
+figure.snip1197 blockquote:before,
+figure.snip1197 blockquote:after {
+  font-family: 'FontAwesome';
+  content: "\201C";
+  position: absolute;
+  font-size: 50px;
+  opacity: 0.3;
+  font-style: normal;
+}
+figure.snip1197 blockquote:before {
+  top: 25px;
+  left: 20px;
+}
+figure.snip1197 blockquote:after {
+  content: "\201D";
+  right: 20px;
+  bottom: 0px;
+}
+/*figure.snip1197 .arrow {
+  top: 30px;
+  left: 100%;
+  width: 0;
+  height: 0;
+  border-left: 0 solid transparent;
+  border-right: 25px solid transparent;
+  border-top: 25px solid #ffffff;
+  margin: 0;
+  position: absolute;
+}*/
+figure.snip1197 .arrow {
+    right: 99%;
+    top: 50px;
+    /* left: -5%; */
+    width: 0;
+    height: 0;
+    border-left: 0 solid transparent;
+    border-right: 25px solid transparent;
+    border-top: 25px solid #ffffff;
+    margin: 0;
+    position: absolute;
+    transform: rotate(90deg);
+}
+figure.snip1197 .author {
+  position: relative;
+  top: 100%;
+  width: 60%;
+  padding: 10px 15px;
+  color: #ffffff;
+  margin: 0;
+  text-transform: uppercase;
+  display: inline-block;
+
+}
+figure.snip1197 .author h5 {
+  opacity: 0.8;
+  margin: 0;
+  font-weight: 800;
+}
+figure.snip1197 .author h5 span {
+  font-weight: 400;
+  text-transform: none;
+  padding-left: 5px;
+}
