--- a/src/app/pages/testimony/testimony.component.html
+++ b/src/app/pages/testimony/testimony.component.html
@@ -17,45 +17,29 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="head_title" style="margin-bottom: 50px;">
-						<h3 style="font-size: 3rem;">PÓS MORAR</h3>
+						<h3 style="font-size: 3rem;">Depoimentos</h3>
 						<div class="separator"></div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
-				<div class="col-sm-6">
-					<p class="font-124">O Concilia BR-381 e Anel procura minimizar os possíveis impactos causados pelo processo de remoção das famílias que residiam em áreas de risco às margens da BR-381 e do Anel Rodoviário de Belo Horizonte. Faz parte do programa a assistência às famílias em situação de vulnerabilidade social, prevista no processo de reassentamento como mecanismo facilitador para acompanhar a sua adaptação à nova moradia.</p>
-					<p class="font-124">Esse acompanhamento Pós-Morar é desenvolvido pelo DNIT e pela URBEL, por meio de equipe multidisciplinar, devidamente treinada, para lidar com as famílias reassentadas. O Pós-Morar leva em consideração a alteração nos laços  sociais, econômicos, culturais dos beneficiários e não somente o aspecto físico-espacial. </p>
-					<p class="font-124">Esse acompanhamnto envolve atividades de monitoramento, integração e inserção das famílias nos novos ambientes. Dentre as atividades previstas destacam-se:</p>
-				</div>
-				<div class="col-sm-6">
-					<span class="concilia-credit">
-						<i class="fa fa-user"></i>
-						&nbsp;&nbsp;Alexandre Dutra
-					</span>
-					<img src="assets/images/page_posmorar.jpg" alt="">
-					<span class="concilia-caption">
-						<i class="fa fa-camera"></i>
-						&nbsp;&nbsp;A camareira Rosinha Ramalho cozinhando na casa nova.
-					</span>
+			<div class="at-grid" data-column="3">
 
+				<div class="at-column" *ngFor="let item of testimonys">
+					<div class="at-user">
+						<div class="at-user__avatar">
+							<img src="{{item.image}}" />
+						</div>
+						<div class="at-user__name">{{item.name}}</div>
+						<div class="at-user__title">
+							<p>{{item.testimony}}</p>
+							<p>{{item.exPlace}}</p>
+							<p>{{item.place}}</p>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div><br />
-		<div class="row">
-			<div class="col-md-12">
-				<ul class="single_ab_mision">
-					<li class="col-sm-6 font-124">
-						<i class="fa fa-check-square"></i>
-						Aplicação de instrumental para verificação da adaptação da família à nova realidade;
-					</li>
-					<li class="col-sm-6 font-124">
-						<i class="fa fa-check-square"></i>
-						Articulação com os agentes locais para inclusão das famílias em programas específicos.
-					</li>
-				</ul>
+
 			</div>
 		</div><br /><br />
 	</div>
