Removendo console.log

--- a/src/app/pages/home/testimony/testimony.component.html
+++ b/src/app/pages/home/testimony/testimony.component.html
@@ -29,7 +29,7 @@
                                         <br>
                                         <span>- {{item.exPlace}}</span>
                                         <br>
-                                        <span>- {{item.exPlace}}</span>
+                                        <span>- {{item.place}}</span>
                                     </h5>
                                 </div>
                             </figure>
