Correção da timeline, inclusão de contato whats

--- a/src/app/pages/after-living/after-living.component.html
+++ b/src/app/pages/after-living/after-living.component.html
@@ -27,8 +27,8 @@
 			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
 				<div class="col-sm-6">
 					<p class="font-124">O Concilia BR-381 e Anel procura minimizar os possíveis impactos causados pelo processo de remoção das famílias que residiam em áreas de risco às margens da BR-381 e do Anel Rodoviário de Belo Horizonte. Faz parte do programa a assistência às famílias em situação de vulnerabilidade social, prevista no processo de reassentamento como mecanismo facilitador para acompanhar a sua adaptação à nova moradia.</p>
-					<p class="font-124">Esse acompanhamento Pós-Morar é desenvolvido pelo DNIT e pela URBEL, por meio de equipe multidisciplinar, devidamente treinada, para lidar com as famílias reassentadas. O Pós-Morar leva em consideração a alteração nos laços  sociais, econômicos, culturais dos beneficiários e não somente o aspecto físico-espacial. </p>
-					<p class="font-124">Esse acompanhamnto envolve atividades de monitoramento, integração e inserção das famílias nos novos ambientes. Dentre as atividades previstas destacam-se:</p>
+					<p class="font-124">As ações do Pós-Morar são desenvolvidas pelo DNIT e pela URBEL, por meio de equipes multidisciplinares, devidamente treinadas, para lidar com as famílias reassentadas. Uma das ações, o acompanhamento do Pós-Morar, leva em consideração a alteração nos laços sociais, econômicos, culturais dos beneficiários e não somente o aspecto físico-espacial. </p>
+					<p class="font-124">Esse acompanhamento envolve atividades de monitoramento, integração e inserção das famílias nos novos ambientes. Dentre as atividades previstas destacam-se:</p>
 				</div>
 				<div class="col-sm-6">
 					<span class="concilia-credit">
