--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -32,8 +32,8 @@
                                                     <img src="assets/images/contact/home.png" alt="">
                                                 </div>
                                                 <div class="single_info_text">
-                                                    <h3>Venha nos visitar</h3>
-                                                    <p>Rua Sapucaí, 571, bairro Floresta, Belo Horizonte - MG</p>
+                                                    <h3>Venha nos visitar.</h3>
+                                                    <p>Rua Sapucaí, 571, Bairro Floresta, Belo Horizonte - MG</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -56,6 +56,17 @@
                                                 <div class="single_info_text">
                                                     <h3>Ligue para nós</h3>
                                                     <p>(31) 3224-7704 </p>
+                                                </div>
+                                            </div>
+                                        </div>
+										<div class="col-sm-12">
+                                            <div class="single_contact_info">
+                                                <div class="single_info_icon">
+                                                    <img src="assets/images/contact/watts.png" alt="">
+                                                </div>
+                                                <div class="single_info_text">
+                                                    <h3>CELULAR E WHATSAPP</h3>
+                                                    <p>(31) 9 9176- 1102 </p>
                                                 </div>
                                             </div>
                                         </div>
