--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,7 +29,7 @@
 				</div>
 				 <div class="col-sm-4">
 					 <ul>
-						 <li><a target="_blank" href="https://viladaluzcomunicac.wixsite.com/vila-da-luz-e-anel" class="links-uteis">Movimento de moradia vila da Luz e Anel Rodoviário</a></li>
+						 <li><a target="_blank" href="https://viladaluzcomunicac.wixsite.com/vila-da-luz-e-anel" class="links-uteis">Movimento de Moradia Vila da Luz e Anel Rodoviário</a></li>
 						 <li><a target="_blank" href="http://www.corimg.org/" class="links-uteis">CORI - Colégio Registral Imobiliário de Minas Gerais</a></li>
 						 <li><a target="_blank" href="http://www.copasa.com.br/media2/PesquisaEscolar/COPASA_Agua.pdf" class="links-uteis">Cartilha Saneamento e vida saudável</a></li>
 						 <li><a target="_blank" href="http://www.cemig.com.br/pt-br/A_Cemig_e_o_Futuro/sustentabilidade/nossos_programas/Eficiencia_Energetica/Documents/CD-0028-15%20DICAS%20DE%20ENERGIA_CARTILHA%2015x21cm%2009-03_LOS_marca%20nova.pdf" class="links-uteis">Cartilha da economia de energia</a></li>
@@ -44,30 +44,32 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p class="label-rodape" style="text-align:center">Apoio:</p>
-					<a href="http://comunidadecmar.blogspot.com.br" target="_blank" title="" style="width: 100px;display: inline-block;text-decoration:none;">
-						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/CMAR2.png" alt="" />
-					</a>
 					<a href="http://www.corimg.org/" target="_blank" title="" style="width: 190px;display: inline-block;text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/cori_horizontal.png" alt="" />
 					</a>
 				</div><br /><br/>
 				<div class="col-md-12">
 					<p class="label-rodape" style="text-align:center">Parceria:</p>
+					<a href="http://comunidadecmar.blogspot.com.br" target="_blank" title="" style="display:inline-block;margin-right:34px;">
+						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/CMAR2.png" style="display: inline-block;max-width: 125px;"alt="" />
+					</a>
 					<a href="http://portalpbh.pbh.gov.br/pbh/ecp/comunidade.do?app=urbel" target="_blank" title="" style="text-decoration:none;">
-						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/1.png" alt="" style="display:inline-block;margin-right:17px;"/>
+						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/1.png" alt="" style="display:none;margin-right:17px;"/>
 					</a>
 
-					<a href="http://portalpbh.pbh.gov.br/pbh/" target="_blank" title="" style="text-decoration:none;">
-						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/2.png" alt="" style="display:inline-block;margin-right:34px;"/>
+					<!-- <a href="http://portalpbh.pbh.gov.br/pbh/" target="_blank" title="" style="text-decoration:none;"> -->
+					<a href="" target="_blank" title="" style="text-decoration:none;"> -->
+					<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/2.png" alt="" style="display:none;margin-right:34px;"/>
 					</a>
 
 					<a href="http://www.dpu.def.br" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/3.png" alt="" style="display:inline-block;margin-right:34px;"/>
 					</a>
-
+ 
 					<a href="http://www.mpf.mp.br/mg" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/4.png" alt="" style="display:inline-block;margin-right:34px;"/>
 					</a>
+					
 				</div>
 			</div><br/><br/><br/>
 			<div class="row">
@@ -78,7 +80,7 @@
 					</a>
 
 					<a href="http://www.dnit.gov.br" target="_blank" title="" style="text-decoration:none;">
-						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/2.png" alt="" style="display:inline-block;margin-right:17px;"/>
+						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/2.png" alt="" style="display:none; margin-right:17px;"/>
 					</a>
 
 					<a href="http://www.transportes.gov.br" target="_blank" title="" style="text-decoration:none;">
@@ -86,7 +88,7 @@
 					</a>
 
 					<a href="#" target="_blank" title="" style="text-decoration:none;">
-						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/4.png" alt="" style="display:inline-block"/>
+						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/4.png" alt="" style="display:none"/>
 					</a>
 				</div>
 			</div>
